[package]
name = "gyro"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.72"
clap = "4.3.19"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tokio = { version = "1", features = ["full"] }
